Adjusted vendor reference number as repeatable field